// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageList component draw a chat message 1`] = `
<div>
  <section
    className="MessageBlock-container-7"
  >
    <div
      className="MessageBlock-userNameLabel-10"
    >
      Name2
    </div>
    <div
      className="MessageBlock-textLabel-11"
    >
      text1
    </div>
    <div
      className="MessageBlock-dateLabel-12"
    >
      Feb 1, 2019, 00:00
    </div>
  </section>
</div>
`;

exports[`MessageList component draw my message 1`] = `
<div>
  <section
    className="MyMessageBlock-myMessageContainer-3"
  >
    <section
      className="MessageBlock-container-7 MyMessageBlock-container-1"
    >
      <div
        className="MessageBlock-userNameLabel-10 MyMessageBlock-userNameLabel-4"
      >
        You
      </div>
      <div
        className="MessageBlock-textLabel-11 MyMessageBlock-textLabel-5"
      >
        text1
      </div>
      <div
        className="MessageBlock-dateLabel-12 MyMessageBlock-dateLabel-6"
      >
        Feb 1, 2019, 00:00
      </div>
    </section>
  </section>
</div>
`;
